--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -14,10 +14,10 @@
     border-right: 1px solid var(--border-color); */
     width: 370px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-    &:hover .text-overlay {
-            transform: translateY(0);
-        }
+.portfolio__item:hover .text-overlay {
+    transform: translateY(0);
 }
 
 /*img {margin-bottom: 20px;} */
