--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -10,3 +10,25 @@
     padding-bottom: 94px;
     padding-top: 94px;
 }
+
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+
+    .container {
+        max-width: 480px;
+    }
+
+    .contact-us .container {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        // align-items: baseline;
+    }
+
+    .header .container {
+        border-bottom: 1px solid #ececec;
+    }
+}
+
