--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,4 +1,4 @@
-.portfolio {
+.main-list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
@@ -6,23 +6,15 @@
     margin-bottom: 94px;
 }
 
-.portfolio__item {
+.main-list-item {
     width: calc((100%/3));
     margin-top: 50px;
-    /*border-bottom: 1px solid var(--border-color);
-    border-left: 1px solid var(--border-color);
-    border-right: 1px solid var(--border-color); */
     width: 370px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio__item:hover .text-overlay {
-    transform: translateY(0);
-}
 
-/*img {margin-bottom: 20px;} */
-
-.portfolio__item :nth-last-child() {
+.main-list-item :nth-last-child() {
     margin-right: 30px;
 }
 
@@ -56,20 +48,23 @@
     border-top: 1px solid var(--border-color);
 }
 
-.porfolio__wrapper:hover {
+.porfolio-wrapper:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         1px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
 }
 
-.boxoverlay {
+.box-overlay {
     position: relative;
     overflow: hidden;
 }
 
+.main-list-item:hover .text-overlay {
+    transform: translateY(0);
+}
 
-.boxoverlay__text {
+.text-overlay {
     position: absolute;
     width: 370;
     height: 294;
