--- a/sass/components/_adventages.scss
+++ b/sass/components/_adventages.scss
@@ -1,4 +1,227 @@
-.sectionadventages {
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .sectionadventages {
+            display: flex;
+            list-style: none;
+            align-items: center;
+            justify-content: center;
+        }
+    .adventages{
+        display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            list-style: none;
+            padding-top: 60px;
+    }
+
+    .adventages__header {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 1.143;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            color: #212121;
+        }
+
+        .adventages__text {
+            margin-left: 15px;
+            max-width: 450px;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 1.714;
+            letter-spacing: 0.03em;
+            color: #757575;
+        }
+
+       .adventages__icon {
+        background-color: var(--btn-backround);
+            margin-bottom: 30px;
+            width: 100%;
+            height: 120px;
+            padding: 25px;
+        }
+    
+
+    .adventages__item{
+        width: 100%;
+        height: 120px;
+    
+        align-items: center;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 136px;
+        padding-top: 25px;
+        padding-bottom: 25px;    
+    }
+}
+
+
+@media screen and (min-width: 768px) {
+    
+
+       .adventages {
+            display: flex;
+            flex-wrap: wrap;
+            list-style: none;
+        }
+
+       .adventages__item {
+            width: 354px;
+            margin-right: 16px
+        }
+
+        .adventages__header {
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 1.143;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            color: #212121;
+        }
+
+        .adventages__text {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 1.875;
+            letter-spacing: 0.03em;
+            color: #757575;
+        }
+
+        .adventages__icon{
+        background-color: var(--btn-backround);
+            margin-bottom: 30px;
+            width: 270px;
+            height: 120px;
+            padding: 25px;
+        }
+    }
+
+    .adventages__item>.adventages__text {
+        line-height: 1.714;
+        font-weight: 400;
+        letter-spacing: 0.03em;
+        font-size: 14px;
+        line-height: 1.714;
+        letter-spacing: 0.03em;
+    }
+
+
+@media screen and (min-width: 1200px) {
+    
+        .adventages {
+            display: flex;
+            list-style: none;
+        }
+
+        .adventages__item{
+            width: 270px;
+        }
+
+        .adventages__header {
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 1.143;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            color: #212121;
+
+        }
+
+        .adventages__text {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 1.875;
+            letter-spacing: 0.03em;
+            color: #757575;
+            width: 270px;
+        }
+
+        .adventages__icon {
+        background-color: var(--btn-backround);
+            margin-bottom: 30px;
+            width: 270px;
+            height: 120px;
+            padding: 25px;
+        }
+    }
+
+        .adventages__item>.adventages__text {
+        line-height: 1.714;
+        font-weight: 400;
+        letter-spacing: 0.03em;
+        font-size: 14px;
+        line-height: 1.714;
+        letter-spacing: 0.03em;
+    }
+
+    .adventage .adventages__item {
+        margin-right: 30px;
+    }
+/*.adventages__icon {
+    background-color: var(--btn-backround);
+    margin-bottom: 30px;
+    width: 270px;
+    height: 120px;
+    padding: 25px;
+}
+.adventages__text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 3%;
+    color: var(--main-grey);
+}
+.adventages__header {
+    font-style: bold;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 3%;
+    color: var(--main-black);
+    margin-bottom: 10px;
+}
+.adventages {
+    list-style: none;
+}
+.adventages__item{
+    &:not(:last-child){
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+  .adventages {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: -15px;
+  }
+  .adventages__item{
+      flex-basis: calc((100%-60px)/2);
+      margin-top: 30px;
+      margin-bottom: 30px;
+  }  
+  }
+
+@media screen and (min-width: 1200px) {
+  .adventages {
+    padding-bottom: 0;
+    display: flex;
+    justify-content: space-between;
+
+    
+    &__item {
+        margin: 15px;
+        flex-basis: calc((100%-3*30px)/4);
+    }
+  }
+}*/
+
+
+/*.sectionadventages {
     margin-top: 94px;
     margin-bottom: 94px;
 }
@@ -38,4 +261,4 @@
     width: 270px;
     height: 120px;
     padding: 25px;
-}
+}*/
