--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -1,8 +1,8 @@
 body {
     font-family: var(--main-font);
     color: var(--main-color);
-    max-width: 1600px;
-    margin: 0 auto;
+    /*max-width: 1600px;
+    margin: 0 auto;*/
 }
 
 h1,
@@ -23,8 +23,11 @@ ol {
 
 p {
     padding: 0;
+    margin: 0;
 }
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
