--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,4 +1,50 @@
 .container {
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 480px) {
+    .container {
+        max-width: 480px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 740px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container {
+        max-width: 1200px;
+    }
+}
+
+.section {
+    padding-bottom: 60px;
+    padding-top: 60px;
+}
+
+@media screen and (min-width: 768px) {
+    .section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .section {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+}
+    
+
+
+
+/*.container {
     width: 1200px;
     padding: 0 15px;
     align-items: center;
@@ -10,25 +56,9 @@
     padding-bottom: 94px;
     padding-top: 94px;
 }
+*/
 
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
 
-    .container {
-        max-width: 480px;
-    }
 
-    .contact-us .container {
-        padding-top: 60px;
-        padding-bottom: 60px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        // align-items: baseline;
-    }
-
-    .header .container {
-        border-bottom: 1px solid #ececec;
-    }
-}
 
