--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,116 @@
-.hero {
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .hero {
+        background-color: var(--color-backgroudn);
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url("/images/newimages/backgrounds/bgmobile.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center top;
+        padding-top: 118px;
+    }
+
+       .hero__header {
+            font-family: var(--secondary-font);
+                font-weight: 900;
+                font-style: var(--black);
+                font-size: 26px;
+                line-height: 1.3636;
+                letter-spacing: 6%;
+                color: var(--white);
+                margin-bottom: 40px;
+        }
+    }
+
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px) {
+    .hero {
+        background-color: var(--color-backgroudn);
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url("/images/newimages/backgrounds/bgmobile@2x.jpg");
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width:1199px) {
+    
+    .hero {
+            background-color: var(--color-backgroudn);
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url("./images/newimages/backgrounds/bgtablet.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            display: flex;
+            padding-top: 118px;
+    
+            .hero__header {
+                font-family: var(--secondary-font);
+                font-weight: 900;
+                font-style: var(--black);
+                font-size: 26px;
+                line-height: 1.3636;
+                letter-spacing: 6%;
+                color: var(--white);
+                margin-bottom: 40px;
+            }
+    }
+}
+
+@media screen and (min-device-pixel-ratio:2) and (min-width: 768px) and (max-width: 1199px),
+screen and (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1199px),
+screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px) {
+    .hero {
+        background-color: var(--color-backgroudn);
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url("/images/newimages/backgrounds/bgtablet@2x.jpg");
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .hero {
+            background-color: var(--color-backgroudn);
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url("/images/newimages/backgrounds/bgdesktop.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            display: flex;
+            padding-top: 118px;
+        }
+    
+        .hero__header {
+            font-family: var(--secondary-font);
+            font-weight: 900;
+            font-style: var(--black);
+            font-size: 44px;
+            line-height: 1.3636;
+            letter-spacing: 6%;
+            color: var(--white);
+            margin-bottom: 40px;
+        }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+screen and (min-resolution: 192dpi) and (min-width: 1200px),
+screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    .hero {
+        background-color: var(--color-backgroudn);
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url("/images/newimages/backgrounds/bgdesktop@2x.jpg");
+    }
+}
+
+
+
+
+
+
+/*.hero {
     background-color: var(--color-backgroudn);
     padding-top: 200px;
     padding-bottom: 190px;
@@ -44,3 +156,4 @@
     margin-right: auto;
     margin-left: auto;
 }
+*/
