--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,13 +1,17 @@
+.hero.container {
+    justify-content: center;
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .hero {
         background-color: var(--color-backgroudn);
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)),
-            url("/images/newimages/backgrounds/bgmobile.jpg");
+            url("../images/newimages/backgrounds/bgmobile.jpg");
         background-size: cover;
         background-repeat: no-repeat;
-        background-position: center top;
-        padding-top: 118px;
+        background-position: center;
+        padding: 118px 0;
     }
 
        .hero__header {
@@ -19,6 +23,7 @@
                 letter-spacing: 6%;
                 color: var(--white);
                 margin-bottom: 40px;
+                text-align: center;
         }
     }
 
@@ -30,7 +35,7 @@ screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px)
         background-color: var(--color-backgroudn);
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)),
-            url("/images/newimages/backgrounds/bgmobile@2x.jpg");
+            url("../images/newimages/backgrounds/bgmobile@2x.jpg");
     }
 }
 
@@ -40,11 +45,12 @@ screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px)
             background-color: var(--color-backgroudn);
             background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
-                url("./images/newimages/backgrounds/bgtablet.jpg");
+                url("../images/newimages/backgrounds/bgtablet.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             display: flex;
-            padding-top: 118px;
+            padding: 118px 0;
+    }
     
             .hero__header {
                 font-family: var(--secondary-font);
@@ -56,7 +62,7 @@ screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px)
                 color: var(--white);
                 margin-bottom: 40px;
             }
-    }
+    
 }
 
 @media screen and (min-device-pixel-ratio:2) and (min-width: 768px) and (max-width: 1199px),
@@ -66,7 +72,7 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px
         background-color: var(--color-backgroudn);
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)),
-            url("/images/newimages/backgrounds/bgtablet@2x.jpg");
+            url("../images/newimages/backgrounds/bgtablet@2x.jpg");
     }
 }
 
@@ -75,12 +81,14 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px
             background-color: var(--color-backgroudn);
             background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
-                url("/images/newimages/backgrounds/bgdesktop.jpg");
+                url("../images/newimages/backgrounds/bgdesktop.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             display: flex;
-            padding-top: 118px;
+            padding: 118px 0;
         }
+           
+
     
         .hero__header {
             font-family: var(--secondary-font);
@@ -101,8 +109,27 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
         background-color: var(--color-backgroudn);
             background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
-                url("/images/newimages/backgrounds/bgdesktop@2x.jpg");
+                url("../images/newimages/backgrounds/bgdesktop@2x.jpg");
     }
+}
+
+.hero__btn {
+    font-family: var(--secondary-font);
+    font-weight: 700;
+    font-style: bold;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 6%;
+    color: var(--white);
+    background-color: var(--main-color);
+    display: block;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-style: none;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 10px 41px 10px 41px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 
