--- a/css/main.css
+++ b/css/main.css
@@ -104,11 +104,13 @@ img {
     padding-top: 94px;
 }
 */
+.header {
+  border-bottom: 1px solid var(--border-color);
+}
+
 .header .container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid var(--border-color);
 }
 
 .navigation {
@@ -118,8 +120,6 @@ img {
 
 .navigation-list {
   display: flex;
-  align-items: center;
-  list-style: none;
 }
 
 .navigation-list-item:not(:last-child) {
@@ -468,15 +468,6 @@ img {
     height: 120px;
     padding: 25px;
   }
-}
-
-.adventages__item > .adventages__text {
-  line-height: 1.714;
-  font-weight: 400;
-  letter-spacing: 0.03em;
-  font-size: 14px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
 }
 
 @media screen and (min-width: 1200px) {
@@ -839,8 +830,8 @@ img {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) scale(0.9);
-  width: 528px;
-  min-height: 581px;
+  max-width: 450px;
+  min-height: 609px;
   background-color: var(--white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1006,6 +997,13 @@ img {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .portfoliobtn {
