--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,9 @@
+.header{
+border-bottom: 1px solid var(--border-color);
+}
+
 .header .container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid var(--border-color);
+    
 }
