--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,8 +3,8 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%) scale(0.9);
-    width: 528px;
-    min-height: 581px;
+    max-width: 450px;
+    min-height: 609px;
     background-color: var(--white);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -181,4 +181,11 @@
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
+}
+
+@media screen and (min-width: 768px) {
+    .modal {
+        width: 528px;
+        min-height: 581px;
+    }
 }
