--- a/css/main.css
+++ b/css/main.css
@@ -120,10 +120,7 @@ img {
 
 .navigation-list {
   display: flex;
-}
-
-.navigation-list-item:not(:last-child) {
-  margin-right: 46px;
+  list-style: none;
 }
 
 .navigation-list-link {
@@ -140,39 +137,6 @@ img {
   color: var(--main-color);
 }
 
-.navigation-list-item:not(:last-child) {
-  margin-right: 46px;
-}
-
-.navigation-list-item .active-site::after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 56px;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--main-color);
-  transform: translateY(19px);
-}
-
-.active-site {
-  color: var(--main-color);
-}
-
-.header.address {
-  display: flex;
-  margin-left: auto;
-  margin-right: 50px;
-}
-
-.address {
-  margin-bottom: 20px;
-}
-
-.address-mail {
-  margin-right: 41px;
-}
-
 .address-mail,
 .address-phone {
   font-style: normal;
@@ -183,12 +147,38 @@ img {
   color: var(--main-grey);
   text-decoration: none;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
 }
 
 .address-mail:hover, .address-mail:focus,
 .address-phone:hover,
 .address-phone:focus {
   color: var(--main-color);
+}
+
+.active-site {
+  color: var(--main-color);
+}
+
+.active-site::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--main-color);
+  transform: translateY(19px);
+  top: 47px;
+}
+
+.navigation-list-item {
+  position: relative;
+}
+
+.address {
+  margin-right: 15px;
+  margin-left: auto;
 }
 
 .mail-icon,
@@ -203,6 +193,160 @@ img {
   fill: var(--main-color);
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .navigation {
+    display: none;
+    height: 60px;
+  }
+  .header .container {
+    position: relative;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+  .navigation-list-link,
+  .address-mail,
+  .address-phone {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header .container {
+    padding-top: 26px;
+    padding-bottom: 26px;
+    display: flex;
+    align-items: center;
+  }
+  .navigation-list-link:not(:last-child) {
+    margin-right: 60px;
+  }
+  .navigation__hamburger {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header .container {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: flex;
+    align-items: center;
+  }
+  .navigation-list-link:not(:last-child) {
+    margin-right: 40px;
+  }
+  .navigation-list-link,
+  .address-mail,
+  .address-phone {
+    font-size: 14px;
+    line-height: 1.1429;
+  }
+  .address-mail {
+    margin-right: 50px;
+    margin-left: auto;
+  }
+  .active-site::after {
+    top: 45px;
+  }
+  .mail-icon,
+  .phone-icon {
+    margin-right: 10px;
+  }
+  .address {
+    display: flex;
+  }
+  .navigation__hamburger {
+    display: none;
+  }
+}
+
+/*.navigation-list-item:not(:last-child) {
+    margin-right: 46px;
+}
+
+
+.navigation-list-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1429;
+    letter-spacing: 2%;
+    color: var(--main-black);
+    text-decoration: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+            color: var(--main-color);
+        }
+} 
+
+.navigation-list-item:not(:last-child) {
+    margin-right: 46px;
+}
+
+
+
+.navigation-list-item .active-site::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 56px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--main-color);
+    transform: translateY(19px);
+}
+
+.active-site {
+    color: var(--main-color);
+}
+
+.header.address {
+    display: flex;
+    margin-left: auto;
+    margin-right: 50px;
+}
+
+.address {
+    margin-bottom: 20px;
+}
+
+.address-mail {
+    margin-right: 41px;
+}
+
+
+.address-mail,
+.address-phone {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1429;
+    letter-spacing: 2%;
+    color: var(--main-grey);
+    text-decoration: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+            color: var(--main-color);
+        }
+}
+
+
+
+.mail-icon,
+.phone-icon {
+    margin-right: 10px;
+    fill: var(--main-grey);
+
+
+    &:hover,
+    &:focus {
+            fill: var(--main-color);
+        }
+}
+*/
 .logo {
   color: var(--main-black);
   font-weight: 700;
