--- a/sass/components/_mobilemenu.scss
+++ b/sass/components/_mobilemenu.scss
@@ -1,129 +1,158 @@
-.burger-btn {
-    background-color: transparent;
+@media screen and (min-width:320px) and (max-width:767px) {
+.navigation__hamburger {
+    display: flex;
+    margin-left: auto;
+    margin-right: 8px;
+    padding-right: 0;
+    padding-left: 0;
+    padding-top: 0;
+    padding-bottom: 0;
     border: none;
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    line-height: 0;
-    padding: 0;
+    background: none;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
-        fill: $color-accent;
+        fill: var(--secondary-color);
+        cursor: pointer;
     }
 }
+}
 
-.mobile-menu__close-btn {
-    background-color: transparent;
-    border: none;
+.menu-modal {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    min-width: 100%;
+    height: auto;
+    background-color: var(--white-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.menu-close-btn {
+    display: flex;
     position: absolute;
-    top: 10px;
-    right: 15px;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    background-color: var(--white-color);
+    fill: var(--close-color);
+    cursor: pointer;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
-        fill: $color-accent;
+        fill: var(--secondary-color);
     }
 }
 
-@media screen and (max-width: 767px) {
-    .mobile-menu {
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        padding: 48px 40px;
-        background-color: $third-color;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
-            0px 1px 3px rgba(0, 0, 0, 0.16);
-        transform: translateX(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .mobile-menu.is-open {
-        transform: translateX(0);
-    }
-
-    .mobile-nav {
-        flex-grow: 1;
-    }
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
 }
 
-@media screen and (min-width: 768px) {
-
-    .mobile-menu,
-    .burger-btn {
-        display: none;
-    }
+.menu-mobile {
+    margin-top: 48px;
+    list-style: none;
 }
 
-.mobile-nav__item:not(:last-child) {
-    margin-bottom: 32px;
-}
-
-.mobile-nav__link {
+.menu-mobile__item {
     font-weight: 500;
     font-size: 40px;
     line-height: 1.175;
     letter-spacing: 0.02em;
-    color: $color-main;
+    padding-bottom: 32px;
 
-    &:hover,
-    &:focus {
-        color: $color-accent;
+    &:last-child {
+        margin-bottom: 270px;
     }
 }
 
-.mobile-contacts {
-    margin-bottom: 64px;
+.menu-mobile__link {
+    text-decoration: none;
+    color: var(--main-color);
+    margin-left: 40px;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: var(--secondary-color);
+    }
 }
 
-.mobile-email,
-.mobile-phone {
+.menu-contact {
+    margin-bottom: 32px;
+    list-style: none;
+}
+
+.menu-contact__item--phone {
     font-weight: 500;
-    font-size: 24px;
-    line-height: 1.666;
+    font-size: 34px;
+    line-height: 40px;
     letter-spacing: 0.02em;
-    color: $color-secondary;
-
-    &:hover,
-    &:focus {
-        font-size: 34px;
-        line-height: 1.176;
-        color: $color-accent;
-    }
-}
-
-.mobile-phone {
-    display: block;
+    color: var(--gray-color);
     margin-bottom: 32px;
 }
 
-.mobile-social__list {
+.menu-contact__item--mail {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.166;
+    letter-spacing: 0.02em;
+    color: var(--gray-color);
+    margin-bottom: 64px;
+}
+
+.menu-contact__link {
+    text-decoration: none;
+    color: var(--gray-color);
+    margin-left: 40px;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: var(--secondary-color);
+    }
+}
+
+.menu-social {
     display: flex;
     flex-wrap: wrap;
-    margin: -5px;
+    list-style: none;
+    margin-left: 40px;
+    text-decoration: none;
 }
 
-.mobile-social__link {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 1.222;
-    letter-spacing: 0.02em;
-    color: $color-accent;
+.menu-social__item {
+    text-decoration: none;
+    padding-right: 10px;
+    margin-right: 10px;
+
 }
 
-.mobile-social__item {
-    margin: 5px;
-    padding: 0 10px;
+.menu-social__item:not(:last-child) {
     border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
-.mobile-social__item:last-child {
-    border: none;
-    padding-right: 0;
+.menu-social__link {
+    text-decoration: none;
+    color: var(--secondary-color);
 }
+
+
