--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,4 +1,17 @@
-.navigation {
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.navigation {
     display: flex;
     align-items: center;
 }
@@ -108,9 +121,7 @@
         .navigation-list-link:not(:last-child) {
             margin-right: 60px;
         }
-                .navigation__hamburger {
-                    display: none;
-                }
+               
 }
 
 
@@ -150,12 +161,10 @@
     .address{
         display: flex;
     }
-        .navigation__hamburger{
-            display: none;
-        }
+        
             
 
-}
+}*/
 
 
 
