--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,9 +16,9 @@
 @import "./components/portfoliobuttons";
 @import "./components/portfolio";
 @import "./components/footer";
+@import "./components/mobilemenu";
 
 
     
-
 
 
