--- a/css/main.css
+++ b/css/main.css
@@ -104,162 +104,301 @@ img {
     padding-top: 94px;
 }
 */
-.header {
-  border-bottom: 1px solid var(--border-color);
+.page-header {
+  border-bottom: 1px solid #111111;
 }
 
-.header .container {
+.navigation__list {
   display: flex;
-  align-items: center;
 }
 
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.navigation-list {
-  display: flex;
-  list-style: none;
-}
-
-.navigation-list-link {
+.navigation__link,
+.header-email,
+.header-phone {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.1429;
-  letter-spacing: 2%;
-  color: var(--main-black);
-  text-decoration: none;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: 1.143;
+  letter-spacing: 0.02em;
 }
 
-.navigation-list-link:hover, .navigation-list-link:focus {
-  color: var(--main-color);
+.navigation__link {
+  color: #111111;
+  transition-property: color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
 }
 
-.address-mail,
-.address-phone {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.1429;
-  letter-spacing: 2%;
-  color: var(--main-grey);
-  text-decoration: none;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: flex;
+.navigation__link:hover, .navigation__link:focus {
+  color: #111111;
 }
 
-.address-mail:hover, .address-mail:focus,
-.address-phone:hover,
-.address-phone:focus {
-  color: var(--main-color);
+.header-phone,
+.header-email {
+  color: #111111;
+  transition-property: color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
 }
 
-.active-site {
-  color: var(--main-color);
+.header-phone:hover, .header-phone:focus,
+.header-email:hover,
+.header-email:focus {
+  color: #111111;
 }
 
-.active-site::after {
+.navigation__link--active {
+  color: #111111;
+}
+
+.navigation__link--active::after {
   content: "";
   display: block;
   position: absolute;
+  top: 47px;
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: var(--main-color);
-  transform: translateY(19px);
-  top: 47px;
+  background-color: #111111;
 }
 
-.navigation-list-item {
+.navigation__item {
   position: relative;
 }
 
-.address {
-  margin-right: 15px;
+.header-contact__wrapper {
   margin-left: auto;
+  margin-right: 15px;
 }
 
-.mail-icon,
+.email-icon,
 .phone-icon {
-  margin-right: 10px;
-  fill: var(--main-grey);
+  margin-right: 8px;
+  fill: currentColor;
 }
 
-.mail-icon:hover, .mail-icon:focus,
-.phone-icon:hover,
-.phone-icon:focus {
-  fill: var(--main-color);
+.header-phone,
+.header-email {
+  display: flex;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .navigation {
-    display: none;
-    height: 60px;
-  }
-  .header .container {
+@media screen and (max-width: 767px) {
+  .page-header .container {
     position: relative;
     padding-top: 16px;
     padding-bottom: 16px;
   }
-  .navigation-list-link,
-  .address-mail,
-  .address-phone {
+  .navigation__link,
+  .header-email,
+  .header-phone {
     display: none;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .header .container {
+@media screen and (min-width: 768px) {
+  .page-header .container {
+    display: flex;
     padding-top: 26px;
     padding-bottom: 26px;
-    display: flex;
     align-items: center;
   }
-  .navigation-list-link:not(:last-child) {
+  .navigation__item:not(:last-child) {
     margin-right: 60px;
-  }
-  .navigation__hamburger {
-    display: none;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .header .container {
+  .page-header .container {
     padding-top: 24px;
     padding-bottom: 24px;
-    display: flex;
-    align-items: center;
   }
-  .navigation-list-link:not(:last-child) {
-    margin-right: 40px;
+  .navigation__item:not(:last-child) {
+    margin-right: 46px;
   }
-  .navigation-list-link,
-  .address-mail,
-  .address-phone {
+  .navigation__link,
+  .header-email,
+  .header-phone {
     font-size: 14px;
-    line-height: 1.1429;
+    line-height: 1.143;
   }
-  .address-mail {
-    margin-right: 50px;
-    margin-left: auto;
-  }
-  .active-site::after {
+  .navigation__link--active::after {
     top: 45px;
   }
-  .mail-icon,
+  .header-contact__wrapper {
+    display: flex;
+  }
+  .email-icon,
   .phone-icon {
     margin-right: 10px;
   }
-  .address {
-    display: flex;
-  }
-  .navigation__hamburger {
-    display: none;
+  .header-email {
+    margin-left: auto;
+    margin-right: 50px;
   }
 }
 
+/*.header{
+border-bottom: 1px solid var(--border-color);
+}
+
+.header .container {
+    display: flex;
+    align-items: center;
+    
+}*/
+/*.navigation {
+    display: flex;
+    align-items: center;
+}
+
+.navigation-list {
+    display: flex;
+    list-style: none;
+}
+
+.navigation-list-link{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1429;
+    letter-spacing: 2%;
+    color: var(--main-black);
+    text-decoration: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus {
+            color: var(--main-color);
+        }
+}
+
+.address-mail,
+.address-phone {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1429;
+    letter-spacing: 2%;
+    color: var(--main-grey);
+    text-decoration: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+
+    &:hover,
+    &:focus {
+        color: var(--main-color);
+    }
+}
+
+.active-site {
+    color: var(--main-color);
+    
+&::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--main-color);
+    transform: translateY(19px);
+    top: 47px;
+}
+}
+
+.navigation-list-item{
+    position: relative;
+}
+.address {
+    margin-right: 15px;
+    margin-left: auto;
+}
+.mail-icon,
+.phone-icon {
+    margin-right: 10px;
+    fill: var(--main-grey);
+
+
+    &:hover,
+    &:focus {
+        fill: var(--main-color);
+    }
+} 
+
+@media screen and (min-width:320px) and (max-width:767px){
+    .navigation {
+            display: none;
+            height: 60px;
+        }
+    
+    .header { 
+        .container{
+        position: relative;
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }    
+    }
+        .navigation-list-link,
+        .address-mail,
+        .address-phone {
+            display: none;
+        }
+}
+
+@media screen and (min-width:768px) and (max-width:1199px){
+    .header {
+            .container {
+                padding-top: 26px;
+                padding-bottom: 26px;
+                display: flex;
+                align-items: center;
+            }
+        }
+        .navigation-list-link:not(:last-child) {
+            margin-right: 60px;
+        }
+               
+}
+
+
+@media screen and (min-width:1200px){
+    .header {
+            .container {
+                padding-top: 24px;
+                padding-bottom: 24px;
+                display: flex;
+                align-items: center;
+            }
+        }
+    .navigation-list-link:not(:last-child) {
+             margin-right: 40px;
+         }
+    .navigation-list-link,
+    .address-mail,
+    .address-phone {
+            font-size: 14px;
+            line-height: 1.1429;
+    }
+    .address-mail{
+        margin-right: 50px;
+        margin-left: auto;
+
+    }
+    .active-site {
+         &::after {
+             top: 45px;
+         }
+        }
+    
+    .mail-icon,
+    .phone-icon {
+            margin-right: 10px;
+    }
+    .address{
+        display: flex;
+    }
+        
+            
+
+}*/
 /*.navigation-list-item:not(:last-child) {
     margin-right: 46px;
 }
@@ -348,25 +487,58 @@ img {
 }
 */
 .logo {
-  color: var(--main-black);
+  font-family: "Raleway";
   font-weight: 700;
-  font-family: var(--secondary-font);
-  font-style: bold;
-  font-size: 26px;
+  font-size: 24px;
+  line-height: 1.166;
   text-decoration: none;
+  letter-spacing: 0.03em;
+  color: #111111;
+}
+
+.logo--dark-theme {
+  color: #111111;
+}
+
+.logo__label {
+  color: #111111;
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.192;
+  }
+  .page-header__logo {
+    margin-right: 83px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .page-header__logo {
+    margin-right: 93px;
+  }
+}
+
+/*.logo {
+    color: var(--main-black);
+    font-weight: 700;
+    font-family: var(--secondary-font);
+    font-style: bold;
+    font-size: 26px;
+    text-decoration: none;
 }
 
 .logodark {
-  font-family: var(--secondary-font);
-  font-weight: 700;
-  font-size: 26px;
-  font-style: bold;
-  line-height: 1.193;
-  letter-spacing: 3%;
-  color: var(--main-color);
-  text-decoration: none;
-}
-
+    font-family: var(--secondary-font);
+    font-weight: 700;
+    font-size: 26px;
+    font-style: bold;
+    line-height: 1.193;
+    letter-spacing: 3%;
+    color: var(--main-color);
+    text-decoration: none;
+}*/
 .hero.container {
   justify-content: center;
 }
@@ -1426,4 +1598,275 @@ img {
 .newsletter {
   margin-left: 78px;
 }
+
+.burger-btn {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  line-height: 0;
+  padding: 0;
+}
+
+.burger-btn:hover, .burger-btn:focus {
+  fill: #111111;
+}
+
+.mobile-menu__close-btn {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.mobile-menu__close-btn:hover, .mobile-menu__close-btn:focus {
+  fill: #111111;
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    padding: 48px 40px;
+    background-color: #111111;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu.is-open {
+    transform: translateX(0);
+  }
+  .mobile-nav {
+    flex-grow: 1;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu,
+  .burger-btn {
+    display: none;
+  }
+}
+
+.mobile-nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-nav__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: #111111;
+}
+
+.mobile-nav__link:hover, .mobile-nav__link:focus {
+  color: #111111;
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-email,
+.mobile-phone {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.666;
+  letter-spacing: 0.02em;
+  color: #111111;
+}
+
+.mobile-email:hover, .mobile-email:focus,
+.mobile-phone:hover,
+.mobile-phone:focus {
+  font-size: 34px;
+  line-height: 1.176;
+  color: #111111;
+}
+
+.mobile-phone {
+  display: block;
+  margin-bottom: 32px;
+}
+
+.mobile-social__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -5px;
+}
+
+.mobile-social__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.222;
+  letter-spacing: 0.02em;
+  color: #111111;
+}
+
+.mobile-social__item {
+  margin: 5px;
+  padding: 0 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-social__item:last-child {
+  border: none;
+  padding-right: 0;
+}
+
+/*@media screen and (min-width: 320px) and (max-width: 767px) {
+    .modal-mobile {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 370px;
+        max-height: 581px;
+        background-color: #fff;
+        padding: 40px;
+    }
+
+    .navigation-mobile {
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        align-items: flex-start;
+
+        &__link {
+            font-family: $main-font;
+            font-weight: 500;
+            font-size: 40px;
+            line-height: 1.175;
+            letter-spacing: 0.02em;
+            color: #212121;
+            text-decoration: none;
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        &__item {
+            margin-bottom: 32px;
+        }
+
+        &__link:hover,
+        &__link:focus {
+            color: $main-color;
+        }
+    }
+
+    .navigation-mobile-contact {
+        display: flex;
+        flex-direction: column;
+        margin-top: 180px;
+
+        &__item {
+            list-style: none;
+            margin-bottom: 32px;
+        }
+
+        &__link {
+            text-decoration: none;
+        }
+
+        .tel {
+            color: $main-color;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 34px;
+            line-height: 1.177;
+            letter-spacing: 0.02em;
+        }
+
+        .mailto {
+            font-family: $main-font;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 28px;
+            letter-spacing: 0.02em;
+            color: #757575;
+        }
+    }
+
+    .navigation-mobile-social {
+        display: flex;
+        margin-top: 20px;
+
+        &__item {
+            list-style: none;
+        }
+
+        &__link {
+            color: $main-color;
+            text-decoration: none;
+            font-family: $main-font;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 1.222;
+            letter-spacing: 0.02em;
+        }
+    }
+
+    .line {
+        color: #afb1b8;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .close-btn {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        width: 30px;
+        height: 30px;
+        background-color: #fff;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 6px;
+    }
+
+    .is-hidden-mobile {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+
+    .buttonx {
+        width: 18px;
+        height: 18px;
+        fill: #000000;
+    }
+   .navigation__hamburger{
+    margin-right: 10px;
+    &:hover,
+    &:focus {
+            fill: $main-color;
+            cursor: pointer;
+   }
+}
+
+@media screen and (min-width: 768px) {
+    .modal-mobile {
+        display: none;
+    }
+
+    .is-hidden-mobile {
+        display: none;
+    }
+}
+*/
 /*# sourceMappingURL=main.css.map */
