--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,4 +1,154 @@
-.header{
+.page-header {
+    border-bottom: 1px solid #111111;
+}
+
+.navigation__list {
+    display: flex;
+}
+
+.navigation__link,
+.header-email,
+.header-phone {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.02em;
+}
+
+.navigation__link {
+    color: #111111;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+
+    &:hover,
+    &:focus {
+        color: #111111;
+    }
+}
+
+.header-phone,
+.header-email {
+    color: #111111;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+
+    &:hover,
+    &:focus {
+        color: #111111;
+    }
+}
+
+.navigation__link--active {
+    color: #111111;
+
+    &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 47px;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: #111111;
+    }
+}
+
+.navigation__item {
+    position: relative;
+}
+
+.header-contact__wrapper {
+    margin-left: auto;
+    margin-right: 15px;
+}
+
+.email-icon,
+.phone-icon {
+    margin-right: 8px;
+    fill: currentColor;
+}
+
+.header-phone,
+.header-email {
+    display: flex;
+}
+
+@media screen and (max-width: 767px) {
+    .page-header {
+        .container {
+            position: relative;
+            padding-top: 16px;
+            padding-bottom: 16px;
+        }
+    }
+
+    .navigation__link,
+    .header-email,
+    .header-phone {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .page-header {
+        .container {
+            display: flex;
+            padding-top: 26px;
+            padding-bottom: 26px;
+            align-items: center;
+        }
+    }
+
+    .navigation__item:not(:last-child) {
+        margin-right: 60px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .page-header {
+        .container {
+            padding-top: 24px;
+            padding-bottom: 24px;
+        }
+    }
+
+    .navigation__item:not(:last-child) {
+        margin-right: 46px;
+    }
+
+    .navigation__link,
+    .header-email,
+    .header-phone {
+        font-size: 14px;
+        line-height: 1.143;
+    }
+
+    .navigation__link--active {
+        &::after {
+            top: 45px;
+        }
+    }
+
+    .header-contact__wrapper {
+        display: flex;
+    }
+
+    .email-icon,
+    .phone-icon {
+        margin-right: 10px;
+    }
+
+    .header-email {
+        margin-left: auto;
+        margin-right: 50px;
+    }
+}
+
+
+
+/*.header{
 border-bottom: 1px solid var(--border-color);
 }
 
@@ -6,4 +156,4 @@ border-bottom: 1px solid var(--border-color);
     display: flex;
     align-items: center;
     
-}
+}*/
