--- a/sass/components/_mobilemenu.scss
+++ b/sass/components/_mobilemenu.scss
@@ -1,158 +1,280 @@
-@media screen and (min-width:320px) and (max-width:767px) {
-.navigation__hamburger {
-    display: flex;
-    margin-left: auto;
-    margin-right: 8px;
-    padding-right: 0;
-    padding-left: 0;
-    padding-top: 0;
-    padding-bottom: 0;
+.burger-btn {
+    background-color: transparent;
     border: none;
-    background: none;
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        fill: var(--secondary-color);
-        cursor: pointer;
-    }
-}
-}
-
-.menu-modal {
-    position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-    min-width: 100%;
-    height: auto;
-    background-color: var(--white-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-}
-
-.menu-close-btn {
-    display: flex;
     position: absolute;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    background-color: var(--white-color);
-    fill: var(--close-color);
-    cursor: pointer;
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    top: 10px;
+    right: 15px;
+    line-height: 0;
+    padding: 0;
 
     &:hover,
     &:focus {
-        fill: var(--secondary-color);
+        fill: #111111;
     }
 }
 
-.is-hidden {
-    opacity: 0;
-    pointer-events: none;
+.mobile-menu__close-btn {
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+
+    &:hover,
+    &:focus {
+        fill: #111111;
+    }
 }
 
-.menu-mobile {
-    margin-top: 48px;
-    list-style: none;
+@media screen and (max-width: 767px) {
+    .mobile-menu {
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        padding: 48px 40px;
+        background-color: #111111;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+            0px 1px 3px rgba(0, 0, 0, 0.16);
+        transform: translateX(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .mobile-menu.is-open {
+        transform: translateX(0);
+    }
+
+    .mobile-nav {
+        flex-grow: 1;
+    }
 }
 
-.menu-mobile__item {
+@media screen and (min-width: 768px) {
+
+    .mobile-menu,
+    .burger-btn {
+        display: none;
+    }
+}
+
+.mobile-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+}
+
+.mobile-nav__link {
     font-weight: 500;
     font-size: 40px;
     line-height: 1.175;
     letter-spacing: 0.02em;
-    padding-bottom: 32px;
-
-    &:last-child {
-        margin-bottom: 270px;
-    }
-}
-
-.menu-mobile__link {
-    text-decoration: none;
-    color: var(--main-color);
-    margin-left: 40px;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    color: #111111;
 
     &:hover,
     &:focus {
-        color: var(--secondary-color);
+        color: #111111;
     }
 }
 
-.menu-contact {
-    margin-bottom: 32px;
-    list-style: none;
-}
-
-.menu-contact__item--phone {
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 40px;
-    letter-spacing: 0.02em;
-    color: var(--gray-color);
-    margin-bottom: 32px;
-}
-
-.menu-contact__item--mail {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 1.166;
-    letter-spacing: 0.02em;
-    color: var(--gray-color);
+.mobile-contacts {
     margin-bottom: 64px;
 }
 
-.menu-contact__link {
-    text-decoration: none;
-    color: var(--gray-color);
-    margin-left: 40px;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.mobile-email,
+.mobile-phone {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.666;
+    letter-spacing: 0.02em;
+    color: #111111;
 
     &:hover,
     &:focus {
-        color: var(--secondary-color);
+        font-size: 34px;
+        line-height: 1.176;
+        color: #111111;
     }
 }
 
-.menu-social {
+.mobile-phone {
+    display: block;
+    margin-bottom: 32px;
+}
+
+.mobile-social__list {
     display: flex;
     flex-wrap: wrap;
-    list-style: none;
-    margin-left: 40px;
-    text-decoration: none;
+    margin: -5px;
 }
 
-.menu-social__item {
-    text-decoration: none;
-    padding-right: 10px;
-    margin-right: 10px;
-
+.mobile-social__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.222;
+    letter-spacing: 0.02em;
+    color: #111111;
 }
 
-.menu-social__item:not(:last-child) {
+.mobile-social__item {
+    margin: 5px;
+    padding: 0 10px;
     border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
-.menu-social__link {
-    text-decoration: none;
-    color: var(--secondary-color);
+.mobile-social__item:last-child {
+    border: none;
+    padding-right: 0;
 }
 
+
+
+
+/*@media screen and (min-width: 320px) and (max-width: 767px) {
+    .modal-mobile {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 370px;
+        max-height: 581px;
+        background-color: #fff;
+        padding: 40px;
+    }
+
+    .navigation-mobile {
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        align-items: flex-start;
+
+        &__link {
+            font-family: $main-font;
+            font-weight: 500;
+            font-size: 40px;
+            line-height: 1.175;
+            letter-spacing: 0.02em;
+            color: #212121;
+            text-decoration: none;
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        &__item {
+            margin-bottom: 32px;
+        }
+
+        &__link:hover,
+        &__link:focus {
+            color: $main-color;
+        }
+    }
+
+    .navigation-mobile-contact {
+        display: flex;
+        flex-direction: column;
+        margin-top: 180px;
+
+        &__item {
+            list-style: none;
+            margin-bottom: 32px;
+        }
+
+        &__link {
+            text-decoration: none;
+        }
+
+        .tel {
+            color: $main-color;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 34px;
+            line-height: 1.177;
+            letter-spacing: 0.02em;
+        }
+
+        .mailto {
+            font-family: $main-font;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 28px;
+            letter-spacing: 0.02em;
+            color: #757575;
+        }
+    }
+
+    .navigation-mobile-social {
+        display: flex;
+        margin-top: 20px;
+
+        &__item {
+            list-style: none;
+        }
+
+        &__link {
+            color: $main-color;
+            text-decoration: none;
+            font-family: $main-font;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 1.222;
+            letter-spacing: 0.02em;
+        }
+    }
+
+    .line {
+        color: #afb1b8;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .close-btn {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        width: 30px;
+        height: 30px;
+        background-color: #fff;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 6px;
+    }
+
+    .is-hidden-mobile {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+
+    .buttonx {
+        width: 18px;
+        height: 18px;
+        fill: #000000;
+    }
+   .navigation__hamburger{
+    margin-right: 10px;
+    &:hover,
+    &:focus {
+            fill: $main-color;
+            cursor: pointer;
+   }
+}
+
+@media screen and (min-width: 768px) {
+    .modal-mobile {
+        display: none;
+    }
+
+    .is-hidden-mobile {
+        display: none;
+    }
+}
+*/
 
