--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,61 +1,12 @@
 .logo {
-
-    font-family: "Raleway";
+    font-family: var(--second-font);
     font-weight: 700;
     font-size: 24px;
-    line-height: 1.166;
-    text-decoration: none;
+    line-height: 1.167;
     letter-spacing: 0.03em;
-    color: #111111;
-}
-
-.logo--dark-theme {
-    color: #111111;
-}
-
-.logo__label {
-    color: #111111;
-}
-
-// .page-header__logo {
-//     margin-right: 93px;
-// }
-
-@media screen and (min-width: 768px) {
-    .logo {
-        font-size: 26px;
-        line-height: 1.192;
-    }
-
-    .page-header__logo {
-        margin-right: 83px;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .page-header__logo {
-        margin-right: 93px;
-    }
-
-}
-
-
-/*.logo {
-    color: var(--main-black);
-    font-weight: 700;
-    font-family: var(--secondary-font);
-    font-style: bold;
-    font-size: 26px;
     text-decoration: none;
-}
 
-.logodark {
-    font-family: var(--secondary-font);
-    font-weight: 700;
-    font-size: 26px;
-    font-style: bold;
-    line-height: 1.193;
-    letter-spacing: 3%;
-    color: var(--main-color);
-    text-decoration: none;
-}*/
+    &__span {
+        color: var(--main-color);
+    }
+}
