--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,24 +1,54 @@
 .container {
+    width: 100%;
     padding: 0 15px;
     margin: 0 auto;
+
+    .page-header & {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .hero & {
+        padding: 118px 0;
+    }
+
+    .page-footer & {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 @media screen and (min-width: 480px) {
     .container {
         max-width: 480px;
-        margin: 0 auto;
     }
 }
 
 @media screen and (min-width: 768px) {
     .container {
-        max-width: 740px;
+        max-width: 768px;
+
+        .page-header & {
+            justify-content: center;
+        }
     }
 }
 
 @media screen and (min-width: 1200px) {
     .container {
         max-width: 1200px;
+
+        .hero & {
+            padding: 200px 0;
+        }
+
+        .page-footer & {
+            flex-direction: row;
+            align-items: baseline;
+        }
     }
 }
 
@@ -27,18 +57,13 @@
     padding-top: 60px;
 }
 
-@media screen and (min-width: 768px) {
-    .section {
-        padding-top: 60px;
-        padding-bottom: 60px;
-    }
-}
 
 @media screen and (min-width: 1200px) {
     .section {
-        padding-top: 94px;
         padding-bottom: 94px;
+        padding-top: 94px;
     }
+
 }
     
 
