--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,4 +1,149 @@
-.footer {
+.page-footer {
+    background-color: var(--color-backgroudn);
+
+    &__third-heading {
+        color: var(--white);
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    &__contact-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__logo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--white);
+        margin-bottom: 20px;
+    }
+
+    &__address-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 60px;
+    }
+
+    &__address {
+        text-align: center;
+    }
+
+    &__form-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 60px;
+    }
+
+    &__form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        padding-left: 42px;
+        padding-right: 27px;
+        margin-top: 20px;
+    }
+
+    &__icon {
+        margin-left: 24px;
+        width: 24px;
+        height: 24px;
+        fill: var(--white);
+    }
+}
+
+
+
+.page-footer__input {
+    width: 91vw;
+    max-width: 450px;
+    padding: 15px 0;
+    padding-left: 16px;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+
+    &:placeholder-shown {
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0.03em;
+        color: rgba(255, 255, 255, 0.6);
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .page-footer {
+        &__contact-wrapper {
+            flex-direction: row;
+            align-items: baseline;
+        }
+
+        &__address-container {
+            margin-right: 144px;
+            margin-bottom: 0;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .page-footer {
+        padding: 60px 0;
+
+        &__third-heading {
+            text-align: left;
+        }
+
+        &__address-container {
+            justify-content: flex-start;
+            align-items: flex-start;
+            margin-right: 70px;
+            margin-bottom: 0;
+        }
+
+        &__address {
+            text-align: left;
+        }
+
+        &__form-container {
+            align-items: flex-start;
+            margin-top: 0;
+            margin-left: 78px;
+        }
+
+        &__form {
+            flex-direction: row;
+        }
+
+        &__button {
+            margin-top: 0;
+            margin-left: 12px;
+        }
+    }
+
+    .page-footer__input {
+        max-width: 358px;
+    }
+
+}
+
+
+/*.footer {
     display: flex;
     align-items: center;
     justify-items: center;
@@ -97,10 +242,10 @@
     font-size: 20px;
     font-style: normal;
     letter-spacing: 3%;
-}
+} */
 
 /*newsletter*/
-.newsletter__form {
+/*.newsletter__form {
     display: flex;
 }
 
@@ -153,4 +298,4 @@
 
 .newsletter {
     margin-left: 78px;
-}
+}*/
