--- a/sass/components/_mobilemenu.scss
+++ b/sass/components/_mobilemenu.scss
@@ -1,280 +1,127 @@
-.burger-btn {
-    background-color: transparent;
-    border: none;
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    line-height: 0;
-    padding: 0;
+.mobile-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    z-index: 1;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--white);
+    padding: 48px 40px;
+    padding-right: 17.291vw;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus {
-        fill: #111111;
+    &__nav-list {
+        display: block;
+        flex-grow: 1;
     }
+
+    &__nav-item:not(:last-child) {
+        margin-bottom: 32px;
+    }
+
+    &__contact-list {
+        display: block;
+        margin-bottom: 64px;
+    }
+
+    &__contact-item:not(:last-child) {
+        margin-bottom: 32px;
+    }
+
+    &__phone {
+        text-decoration: none;
+        font-weight: 500;
+        font-size: 34px;
+        line-height: 1.176;
+        letter-spacing: 0.02em;
+        color: var(--main-color);
+    }
+
+    &__social-list {
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+
 }
 
 .mobile-menu__close-btn {
-    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    padding: 7px;
     border: none;
-    position: absolute;
     top: 10px;
     right: 15px;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus {
-        fill: #111111;
+    &:hover {
+        fill: var(--main-color);
     }
 }
 
-@media screen and (max-width: 767px) {
-    .mobile-menu {
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        padding: 48px 40px;
-        background-color: #111111;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
-            0px 1px 3px rgba(0, 0, 0, 0.16);
-        transform: translateX(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .mobile-menu.is-open {
-        transform: translateX(0);
-    }
-
-    .mobile-nav {
-        flex-grow: 1;
-    }
-}
-
-@media screen and (min-width: 768px) {
-
-    .mobile-menu,
-    .burger-btn {
-        display: none;
-    }
-}
-
-.mobile-nav__item:not(:last-child) {
-    margin-bottom: 32px;
-}
-
-.mobile-nav__link {
+.mobile-menu__nav-link {
     font-weight: 500;
+    text-decoration: none;
     font-size: 40px;
     line-height: 1.175;
     letter-spacing: 0.02em;
-    color: #111111;
+    color: var(--main-black);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
-        color: #111111;
+        color: var(--main-color);
     }
 }
 
-.mobile-contacts {
-    margin-bottom: 64px;
-}
-
-.mobile-email,
-.mobile-phone {
+.mobile-menu__mail {
+    text-decoration: none;
     font-weight: 500;
     font-size: 24px;
-    line-height: 1.666;
+    line-height: 1.167;
     letter-spacing: 0.02em;
-    color: #111111;
+    color: var(--main-greyr);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
-        font-size: 34px;
-        line-height: 1.176;
-        color: #111111;
+        color: var(--main-color);
     }
 }
 
-.mobile-phone {
-    display: block;
-    margin-bottom: 32px;
-}
-
-.mobile-social__list {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -5px;
-}
-
-.mobile-social__link {
+.mobile-menu__social-link {
+    text-decoration: none;
     font-weight: 500;
     font-size: 18px;
-    line-height: 1.222;
+    line-height: 1.223;
     letter-spacing: 0.02em;
-    color: #111111;
+    color: var(--main-color);
+    position: relative;
+
+
 }
 
-.mobile-social__item {
-    margin: 5px;
-    padding: 0 10px;
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
-}
+.mobile-menu__social-item {
+    position: relative;
 
-.mobile-social__item:last-child {
-    border: none;
-    padding-right: 0;
-}
-
-
-
-
-/*@media screen and (min-width: 320px) and (max-width: 767px) {
-    .modal-mobile {
+    &:not(:first-child)::before {
+        content: "";
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        max-width: 370px;
-        max-height: 581px;
-        background-color: #fff;
-        padding: 40px;
-    }
-
-    .navigation-mobile {
-        display: flex;
-        flex-direction: column;
-        list-style: none;
-        align-items: flex-start;
-
-        &__link {
-            font-family: $main-font;
-            font-weight: 500;
-            font-size: 40px;
-            line-height: 1.175;
-            letter-spacing: 0.02em;
-            color: #212121;
-            text-decoration: none;
-            transition-duration: 250ms;
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        &__item {
-            margin-bottom: 32px;
-        }
-
-        &__link:hover,
-        &__link:focus {
-            color: $main-color;
-        }
-    }
-
-    .navigation-mobile-contact {
-        display: flex;
-        flex-direction: column;
-        margin-top: 180px;
-
-        &__item {
-            list-style: none;
-            margin-bottom: 32px;
-        }
-
-        &__link {
-            text-decoration: none;
-        }
-
-        .tel {
-            color: $main-color;
-            font-style: normal;
-            font-weight: 500;
-            font-size: 34px;
-            line-height: 1.177;
-            letter-spacing: 0.02em;
-        }
-
-        .mailto {
-            font-family: $main-font;
-            font-style: normal;
-            font-weight: 500;
-            font-size: 24px;
-            line-height: 28px;
-            letter-spacing: 0.02em;
-            color: #757575;
-        }
-    }
-
-    .navigation-mobile-social {
-        display: flex;
-        margin-top: 20px;
-
-        &__item {
-            list-style: none;
-        }
-
-        &__link {
-            color: $main-color;
-            text-decoration: none;
-            font-family: $main-font;
-            font-style: normal;
-            font-weight: 500;
-            font-size: 18px;
-            line-height: 1.222;
-            letter-spacing: 0.02em;
-        }
-    }
-
-    .line {
-        color: #afb1b8;
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
-    .close-btn {
-        position: absolute;
-        top: 8px;
-        right: 8px;
-        width: 30px;
-        height: 30px;
-        background-color: #fff;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-        border-radius: 50%;
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 6px;
-    }
-
-    .is-hidden-mobile {
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
-    }
-
-    .buttonx {
-        width: 18px;
-        height: 18px;
-        fill: #000000;
-    }
-   .navigation__hamburger{
-    margin-right: 10px;
-    &:hover,
-    &:focus {
-            fill: $main-color;
-            cursor: pointer;
-   }
-}
-
-@media screen and (min-width: 768px) {
-    .modal-mobile {
-        display: none;
-    }
-
-    .is-hidden-mobile {
-        display: none;
+        left: 0;
+        top: 0;
+        width: 0;
+        height: 100%;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        transform: translateX(-10px);
     }
 }
-*/
-
