--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,263 +1,104 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*.navigation {
-    display: flex;
-    align-items: center;
+.navigation {
+    display: none;
 }
 
-.navigation-list {
-    display: flex;
-    list-style: none;
-}
+@media screen and (min-width: 768px) {
+    .navigation {
+        display: inline-block;
 
-.navigation-list-link{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.1429;
-    letter-spacing: 2%;
-    color: var(--main-black);
-    text-decoration: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+        &__item:not(:last-child) {
+            margin-right: 60px;
+        }
+
+        &__list {
+            margin-right: 101px;
+            margin-left: 83px;
+        }
+    }
+
+    .navigation__link {
+        display: inline-block;
+        position: relative;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.143;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+        color: var(--main-black);
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
         &:hover,
         &:focus {
             color: var(--main-color);
         }
-}
 
-.address-mail,
-.address-phone {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.1429;
-    letter-spacing: 2%;
-    color: var(--main-grey);
-    text-decoration: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: flex;
+        &::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 0;
+            bottom: 0;
+            left: 0;
+            background-color: var(--main-color);
+            transform: translateY(25px);
+            border-radius: 2px;
+            transition: height 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
 
-    &:hover,
-    &:focus {
-        color: var(--main-color);
+        &:hover::after,
+        &:focus::after {
+            height: 4px;
+            transform: translateY(32.25px)
+        }
+
+        &--active::after {
+            content: "";
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 4px;
+            bottom: 0;
+            left: 0;
+            background-color: var(--main-color);
+            transform: translateY(32.25px);
+            border-radius: 2px;
+        }
     }
 }
 
-.active-site {
-    color: var(--main-color);
-    
-&::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--main-color);
-    transform: translateY(19px);
-    top: 47px;
-}
-}
-
-.navigation-list-item{
-    position: relative;
-}
-.address {
-    margin-right: 15px;
-    margin-left: auto;
-}
-.mail-icon,
-.phone-icon {
-    margin-right: 10px;
-    fill: var(--main-grey);
-
-
-    &:hover,
-    &:focus {
-        fill: var(--main-color);
-    }
-} 
-
-@media screen and (min-width:320px) and (max-width:767px){
+@media screen and (min-width: 1200px) {
     .navigation {
-            display: none;
-            height: 60px;
-        }
-    
-    .header { 
-        .container{
-        position: relative;
-        padding-top: 16px;
-        padding-bottom: 16px;
-    }    
-    }
-        .navigation-list-link,
-        .address-mail,
-        .address-phone {
-            display: none;
-        }
-}
 
-@media screen and (min-width:768px) and (max-width:1199px){
-    .header {
-            .container {
-                padding-top: 26px;
-                padding-bottom: 26px;
-                display: flex;
-                align-items: center;
-            }
+        &__item:not(:last-child) {
+            margin-right: 46px;
         }
-        .navigation-list-link:not(:last-child) {
-            margin-right: 60px;
-        }
-               
-}
 
-
-@media screen and (min-width:1200px){
-    .header {
-            .container {
-                padding-top: 24px;
-                padding-bottom: 24px;
-                display: flex;
-                align-items: center;
-            }
+        &__list {
+            margin-right: 345px;
+            margin-left: 93px;
         }
-    .navigation-list-link:not(:last-child) {
-             margin-right: 40px;
-         }
-    .navigation-list-link,
-    .address-mail,
-    .address-phone {
-            font-size: 14px;
-            line-height: 1.1429;
-    }
-    .address-mail{
-        margin-right: 50px;
-        margin-left: auto;
 
     }
-    .active-site {
-         &::after {
-             top: 45px;
-         }
+
+    .navigation__link {
+
+        &::after {
+            transform: translateY(25px);
         }
-    
-    .mail-icon,
-    .phone-icon {
-            margin-right: 10px;
+
+        &:hover::after,
+        &:focus::after {
+            transform: translateY(30.25px);
+        }
+
+        &--active::after {
+            transform: translateY(30.25px);
+        }
     }
-    .address{
-        display: flex;
-    }
-        
-            
-
-}*/
-
-
-
-
-
-
-/*.navigation-list-item:not(:last-child) {
-    margin-right: 46px;
 }
-
-
-.navigation-list-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.1429;
-    letter-spacing: 2%;
-    color: var(--main-black);
-    text-decoration: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-            color: var(--main-color);
-        }
-} 
-
-.navigation-list-item:not(:last-child) {
-    margin-right: 46px;
-}
-
-
-
-.navigation-list-item .active-site::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 56px;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--main-color);
-    transform: translateY(19px);
-}
-
-.active-site {
-    color: var(--main-color);
-}
-
-.header.address {
-    display: flex;
-    margin-left: auto;
-    margin-right: 50px;
-}
-
-.address {
-    margin-bottom: 20px;
-}
-
-.address-mail {
-    margin-right: 41px;
-}
-
-
-.address-mail,
-.address-phone {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.1429;
-    letter-spacing: 2%;
-    color: var(--main-grey);
-    text-decoration: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-            color: var(--main-color);
-        }
-}
-
-
-
-.mail-icon,
-.phone-icon {
-    margin-right: 10px;
-    fill: var(--main-grey);
-
-
-    &:hover,
-    &:focus {
-            fill: var(--main-color);
-        }
-}
-*/
 
 
 
