--- a/sass/components/_sociallinks.scss
+++ b/sass/components/_sociallinks.scss
@@ -1,4 +1,44 @@
- .social__link {
+.socials {
+
+    &:not(:last-child) {
+        margin-right: 10px;
+    }
+
+}
+
+.socials__link {
+    display: flex;
+    padding: 12px;
+    border-radius: 50%;
+    fill: var(--link-color);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &--light {
+        transition-property: fill, background-color;
+    }
+
+    &--light:hover,
+    &--light:focus {
+        fill: var(--white);
+        background-color: var(--main-color);
+    }
+
+    &--dark {
+        fill: var(--white);
+        background-color: rgba(255, 255, 255, 0.1);
+        transition-property: background-color;
+    }
+
+    &--dark:hover,
+    &--dark:focus {
+        background-color: var(--main-color);
+    }
+}
+
+
+
+/*.social__link {
      display: flex;
      padding: 12px;
      border-radius: 50%;
@@ -15,7 +55,7 @@
 
  .social__item .social__link {
      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
+ }*/
 
 
 
